# virtual_fun

./: .Module.symvers.cmd  .modules.order.cmd  .virtual_fan.ko.cmd  .virtual_fan.mod.cmd  .virtual_fan.mod.o.cmd  .virtual_fan.o.cmd  CMakeLists.txt  README.md  build&install.sh  check.sh  compile_commands.json  install.sh  library.h  modules.order  pico-fan.service  test.sh  virtual_fan.c  virtual_fan.ko  virtual_fan.mod  virtual_fan.mod.c  测试.md
.github/workflows/: build-and-deploy.yml
driver/: virtual_fan_driver.c
go_bridge/: PocoSerial.go  main.go  pico-fan-bridge
virtual_fan_v1/: Makefile  dkms.conf
